blocks/v2-images-grid/v2-images-grid.css
:root {
  --v2-images-grid-gutter: 8px;
  --v2-images-grid-padding-space: 24px;
}

.v2-images-grid__items {
  padding-left: 0;
  display: grid;
  grid-template-columns: 50%;
  gap: var(--v2-images-grid-gutter);
  grid-template-areas:
    'area1 area2'
    'area1 area4'
    'area3 area4';
  list-style: none;
  margin-bottom: var(--v2-images-grid-padding-space);
}

.v2-images-grid__item {
  margin: 0;
  transition: scale 300ms;
  width: auto;
}

.v2-images-grid__item:hover {
  scale: 1.05;
  cursor: pointer;
}

.v2-images-grid__picture {
  display: block;
  position: relative;
  height: 100%;
}

.v2-images-grid__item:nth-child(1) {
  grid-area: area1;
}

.v2-images-grid__item:nth-child(2) {
  grid-area: area2;
}

.v2-images-grid__item:nth-child(3) {
  grid-area: area3;
}

.v2-images-grid__item:nth-child(4) {
  grid-area: area4;
}

.v2-images-grid__item img {
  object-fit: cover;
  width: 100%;
  display: block;
  height: 100%;
}

.v2-images-grid__item:nth-child(1) img,
.v2-images-grid__item:nth-child(4) img {
  aspect-ratio: 1/1;
}

.v2-images-grid__item:nth-child(2) img,
.v2-images-grid__item:nth-child(3) img {
  aspect-ratio: 4/3;
}

.v2-images-grid__figcaption {
  display: none;
}

.v2-images-grid__modal-content {
  display: flex;
  flex-direction: column;
  position: relative;
  height: auto;
  justify-content: flex-end;
}

.v2-images-grid__carousel-items-list,
.v2-images-grid__carousel-preview-list {
  display: flex;
  padding: 0;
  list-style: none;
  margin: 0;
  max-width: 100%;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
  overflow: scroll hidden;
  flex-wrap: nowrap;
}

.v2-images-grid__carousel-items-list::-webkit-scrollbar,
.v2-images-grid__carousel-preview-list::-webkit-scrollbar {
  display: none;
}

.v2-images-grid__carousel-preview-list {
  gap: 10px;
  padding: 20px;
  background: var(--c-primary-white);
}

.v2-images-grid__carousel-item,
.v2-images-grid__carousel-preview-item {
  scroll-snap-align: center;
}

.v2-images-grid__carousel-item {
  min-width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 90px;
}

.v2-images-grid__carousel-item p {
  margin: 0;
  padding: 12px 16px;
  background: var(--c-primary-white);
  line-height: var(--body-2-line-height);
  font-size: var(--body-2-font-size);
}

.v2-images-grid__carousel-item picture {
  display: flex;
}

.v2-images-grid__modal-content .v2-images-grid__carousel-item img {
  aspect-ratio: 16/9;
  width: 100%;
}

.v2-images-grid__carousel-preview-item {
  min-width: 80px;
}

.v2-images-grid__modal-arrow {
  margin: 0;
  padding: 0;
  background: var(--c-primary-white);
  display: flex;
  border: 0;
  height: 60px;
  width: 60px;
  justify-content: center;
  align-items: center;
}

.v2-images-grid__modal-arrow:hover,
.v2-images-grid__modal-arrow:active,
.v2-images-grid__modal-arrow:focus,
.v2-images-grid__modal-arrow:focus-visible {
  background: var(--c-primary-white);

  --color-icon: var(--c-accent-copper);
}

.v2-images-grid__modal-arrow svg {
  height: 24px;
  width: 24px;
}

.v2-images-grid__modal-arrow:disabled:hover svg {
  --color-icon: var(--c-primary-black);
}

.v2-images-grid__carousel-items-wrapper {
  position: relative;
}

.v2-images-grid__modal-arrows-wrapper {
  display: none;
  z-index: 1;
  position: absolute;
  top: 50%;
  width: 100%;
}

.v2-images-grid__modal-arrows-wrapper
  .v2-images-grid__modal-arrow:first-of-type {
  top: 50%;
  position: absolute;
}

.v2-images-grid__modal-arrows-wrapper
  .v2-images-grid__modal-arrow:first-of-type
  svg {
  rotate: 180deg;
}

.v2-images-grid__modal-arrows-wrapper
  .v2-images-grid__modal-arrow:last-of-type {
  top: 50%;
  right: 0;
  position: absolute;
}

.v2-images-grid__carousel-preview-item button {
  padding: 0;
  margin: 0;
  display: flex;
  border: 0;
  background: transparent;
}

.v2-images-grid__carousel-preview-item picture {
  display: flex;
}

/* stylelint-disable-next-line no-descending-specificity */
.v2-images-grid__carousel-preview-item img {
  width: 80px;
  height: 60px;
  object-fit: cover;
  object-position: center;
}

@media screen and (min-width: 1200px) {
  :root {
    --v2-images-grid-gutter: 16px;
    --v2-images-grid-padding-space: 40px;
  }

  .v2-images-grid__figcaption {
    display: block;
    text-align: center;
    position: absolute;
    bottom: 10px;
    padding: 9px 9px 7px;
    color: var(--c-primary-white);
    background-color: var(--c-secondary-graphite);
    right: 10px;
    text-transform: uppercase;
    font: 12px/16px var(--ff-body-bold);
    letter-spacing: 1.92px;
  }
}

@media screen and (min-width: 768px) {
  .v2-images-grid__carousel-item {
    gap: 0;
    position: relative;
  }

  .v2-images-grid__carousel-item p {
    position: absolute;
    bottom: 0;
    max-width: 710px;
    margin: 20px;
  }

  .v2-images-grid__modal-arrows-wrapper {
    display: flex;
  }
}

